--- a/connect-django-with-mysql.html
+++ b/connect-django-with-mysql.html
@@ -118,21 +118,21 @@
 									<br>
 									<strong><p style="font-size:24px ;">To connect MySQL as a database in our Django Project we need to install <a href="https://github.com/dqureshiumar/django-mysql-app/blob/master/mysqlclient-1.4.6-cp38-cp38-win32.whl">MYSQLCLIENT</a> </p></strong> <br>
 									<ul>
-										<li><p class="fontt">Download the file from the above provided link or go to <a href="https://www.lfd.uci.edu/~gohlke/pythonlibs/#mysqlclient">https://www.lfd.uci.edu/~gohlke/pythonlibs/#mysqlclient</a></p></li><br>
+										<li><p class="fontt">Download the file from the above provided link or go to <a href="https://www.lfd.uci.edu/~gohlke/pythonlibs/#mysqlclient">Click Here</a></p></li><br>
 
 										<li><p class="fontt">Open the path in your command prompt where you have downloaded the file</p></li><br>
 
 										<li><p class="fontt">Run pip install mysqlclient-1.4.6-cp38-cp38-win32.whl <br><strong><small>Note : if you are using virtual environment so install it under your virtual environment</small></strong></p></li><br>
 
 										<li><p class="fontt">If you are using XAMPP Server start the Apache Server and MySQL</p>
-										<img src="images/djangomysql/xampp.png" alt="Xampp Server">
+										<img src="images/djangomysql/xampp.PNG" alt="Xampp Server">
 
 										<strong><p>Note down the port number on which Mysql Server is running. In my case it's 3306</p></strong>
 										</li>
 										<br><br>
 										<li>
 											<p class="fontt">Go to your Django Project's settings.py file</p>
-											<img src="images/djangomysql/django-tree.png" alt="Django Project Skeleton" width=100 height=100>
+											<img src="images/djangomysql/django-tree.PNG" alt="Django Project Skeleton" width=100 height=100>
 										</li>
 
 										<br><br>
@@ -146,7 +146,7 @@
 										<li>
 
 											<p class="fontt">In the Databases change your database configuration to this :</p>
-											<img src="images/djangomysql/databaseconfig.png" alt="Database Configuration">
+											<img src="images/djangomysql/databaseconfig.PNG" alt="Database Configuration">
 
 										</li>
 										<br><br>
