--- a/index.html
+++ b/index.html
@@ -109,9 +109,35 @@
 							</div>
 						</div>
 						<div class="blog-info">
-							<a href="blog-details.html"><h3 class="mb-2">How to Connect Django with MYSQL on Windows</h3></a>
+							<a href="/blogs/connect-django-with-mysql.html"><h3 class="mb-2">How to Connect Django with MYSQL on Windows</h3></a>
 							<p>Python provides a library called the MySql Client that helps us to connect Django with MySQL</p>
 							<a href="/blogs/connect-django-with-mysql.html" class="btn btn-secondary">Read More...</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 blog-pots hover-effect">
+					<div class="single-blog-post">
+						<div class="blog-list img-box">
+							<img src="images/virtualenv/python-virtualenv.jpg" alt>
+							<div class="social">
+								<span class="date">21<span>Mar'20</span></span>
+								<a href="#"><i class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
+							</div>
+							<div class="overlay">
+								<div class="box">
+									<div class="content">
+										<ul>
+											<li><a href="/blogs/setup-virtual-env-in-python.html"><i class="fa fa-link"></i></a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="blog-info">
+							<a href="/blogs/setup-virtual-env-in-python.html"><h3 class="mb-2">How to setup Virtual Environment Wrapper on Windows</h3></a>
+							<p>Python virtual environments create an isolated environment for Python projects for libraries management.</p>
+							<a href="/blogs/setup-virtual-env-in-python.html" class="btn btn-secondary">Read More...</a>
 						</div>
 					</div>
 				</div>
@@ -157,7 +183,7 @@
 							<h3>Quick Links</h3>
 							<div class="nav-footer">
 								<ul>
-									<li><a href="properties-right-sidebar.html">How to connect Django to MySql</a></li>
+									<li><a href="/blogs/connect-django-with-mysql.html">How to connect Django to MySql</a></li>
 									<li><a href="#">Instamojo Integration in Laravel</a></li>
 									<li><a href="https://github.com/dqureshiumar">Mini Projects</a></li>
 								</ul>
