some modification done

--- a/setup-virtual-env-in-python.html
+++ b/setup-virtual-env-in-python.html
@@ -64,11 +64,6 @@
 
 				<nav id="main-menu" class="collapse">
 					<ul>
-						<!-- STAR COLLAPSE MOBILE MENU -->
-						<li class="hidden-lg-up">
-							<a href="/">Home</a>
-						</li>
-						<!-- END COLLAPSE MOBILE MENU -->
 						<li><a href="/blogs/">Home</a></li>
 					</ul>
 				</nav>
@@ -100,7 +95,7 @@
 										<div class="box">
 											<div class="content">
 												<ul>
-													<li><a href="/blogs/setup-virtual-env-in-python.html"><i class="fa fa-link"></i></a></li>
+													<li><a href="blog-details.html"><i class="fa fa-link"></i></a></li>
 												</ul>
 											</div>
 										</div>
@@ -232,19 +227,19 @@
 							</div>
 							<!-- <div class="recent-main my-4">
 								<div class="recent-img">
-									<a href="/blogs/setup-virtual-env-in-python.html"><img src="images/blog/b-2.jpg" alt></a>
+									<a href="blog-details.html"><img src="images/blog/b-2.jpg" alt></a>
 								</div>
 								<div class="info-img">
-									<a href="/blogs/setup-virtual-env-in-python.html"><h6>Real Estate</h6></a>
+									<a href="blog-details.html"><h6>Real Estate</h6></a>
 									<p>May 10, 2018</p>
 								</div>
 							</div>
 							<div class="recent-main no-mb">
 								<div class="recent-img">
-									<a href="/blogs/setup-virtual-env-in-python.html"><img src="images/blog/b-3.jpg" alt></a>
+									<a href="blog-details.html"><img src="images/blog/b-3.jpg" alt></a>
 								</div>
 								<div class="info-img">
-									<a href="/blogs/setup-virtual-env-in-python.html"><h6>Real Estate</h6></a>
+									<a href="blog-details.html"><h6>Real Estate</h6></a>
 									<p>May 10, 2018</p>
 								</div>
 							</div> -->
