some modification done

--- a/connect-django-with-mysql.html
+++ b/connect-django-with-mysql.html
@@ -285,7 +285,7 @@
 					<div class="col-lg-3 col-md-6">
 						<div class="netabout">
 							<a href class="logo">
-								<img src="images/dqureshiumar.png" alt="dqureshiumar">
+								<img src="images/dqureshiumar.png" alt="dqureshiumar" style="width: 70px; height:70px">
 							</a>
 							<p>I am an Information Technology student, currently pursuing my Bachelor's in Engineering from Thakur College of Engineering.</p>
 							<a href="http://dqureshiumar001.000webhostapp.com" class="btn btn-secondary">Know More...</a>
